# rust-libnotify

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Gir.toml  Makefile  README.md  gir-libnotify.toml  index.html  search-index.js
examples/: show.rs
gdk_pixbuf/: enum.InterpType.html  enum.PixbufAlphaMode.html  enum.PixbufError.html  index.html  struct.Pixbuf.html  struct.PixbufAnimation.html  struct.PixbufAnimationIter.html  struct.PixbufFormat.html  struct.PixbufLoader.html  struct.PixbufSimpleAnim.html  trait.PixbufAnimationExt.html  type.Colorspace.html
gdk_pixbuf_sys/: constant.GDK_COLORSPACE_RGB.html  constant.GDK_INTERP_BILINEAR.html  constant.GDK_INTERP_HYPER.html  constant.GDK_INTERP_NEAREST.html  constant.GDK_INTERP_TILES.html  constant.GDK_PIXBUF_ALPHA_BILEVEL.html  constant.GDK_PIXBUF_ALPHA_FULL.html  constant.GDK_PIXBUF_ERROR_BAD_OPTION.html  constant.GDK_PIXBUF_ERROR_CORRUPT_IMAGE.html  constant.GDK_PIXBUF_ERROR_FAILED.html  constant.GDK_PIXBUF_ERROR_INCOMPLETE_ANIMATION.html  constant.GDK_PIXBUF_ERROR_INSUFFICIENT_MEMORY.html  constant.GDK_PIXBUF_ERROR_UNKNOWN_TYPE.html  constant.GDK_PIXBUF_ERROR_UNSUPPORTED_OPERATION.html  constant.GDK_PIXBUF_FEATURES_H.html  constant.GDK_PIXBUF_MAGIC_NUMBER.html  constant.GDK_PIXBUF_MAJOR.html  constant.GDK_PIXBUF_MICRO.html  constant.GDK_PIXBUF_MINOR.html  constant.GDK_PIXBUF_ROTATE_CLOCKWISE.html  constant.GDK_PIXBUF_ROTATE_COUNTERCLOCKWISE.html  constant.GDK_PIXBUF_ROTATE_NONE.html  constant.GDK_PIXBUF_ROTATE_UPSIDEDOWN.html  constant.GDK_PIXBUF_VERSION.html  constant.GDK_PIXDATA_COLOR_TYPE_MASK.html  constant.GDK_PIXDATA_COLOR_TYPE_RGB.html  constant.GDK_PIXDATA_COLOR_TYPE_RGBA.html  constant.GDK_PIXDATA_DUMP_CONST.html  constant.GDK_PIXDATA_DUMP_CTYPES.html  constant.GDK_PIXDATA_DUMP_GTYPES.html  constant.GDK_PIXDATA_DUMP_MACROS.html  constant.GDK_PIXDATA_DUMP_PIXDATA_STREAM.html  constant.GDK_PIXDATA_DUMP_PIXDATA_STRUCT.html  constant.GDK_PIXDATA_DUMP_RLE_DECODER.html  constant.GDK_PIXDATA_DUMP_STATIC.html  constant.GDK_PIXDATA_ENCODING_MASK.html  constant.GDK_PIXDATA_ENCODING_RAW.html  constant.GDK_PIXDATA_ENCODING_RLE.html  constant.GDK_PIXDATA_HEADER_LENGTH.html  constant.GDK_PIXDATA_SAMPLE_WIDTH_8.html  (+135 more)
gio_sys/: constant.G_APPLICATION_CAN_OVERRIDE_APP_ID.html  constant.G_APPLICATION_FLAGS_NONE.html  constant.G_APPLICATION_HANDLES_COMMAND_LINE.html  constant.G_APPLICATION_HANDLES_OPEN.html  constant.G_APPLICATION_IS_LAUNCHER.html  constant.G_APPLICATION_IS_SERVICE.html  constant.G_APPLICATION_NON_UNIQUE.html  constant.G_APPLICATION_SEND_ENVIRONMENT.html  constant.G_APP_INFO_CREATE_NEEDS_TERMINAL.html  constant.G_APP_INFO_CREATE_NONE.html  constant.G_APP_INFO_CREATE_SUPPORTS_STARTUP_NOTIFICATION.html  constant.G_APP_INFO_CREATE_SUPPORTS_URIS.html  constant.G_ASK_PASSWORD_ANONYMOUS_SUPPORTED.html  constant.G_ASK_PASSWORD_NEED_DOMAIN.html  constant.G_ASK_PASSWORD_NEED_PASSWORD.html  constant.G_ASK_PASSWORD_NEED_USERNAME.html  constant.G_ASK_PASSWORD_SAVING_SUPPORTED.html  constant.G_BUS_NAME_OWNER_FLAGS_ALLOW_REPLACEMENT.html  constant.G_BUS_NAME_OWNER_FLAGS_NONE.html  constant.G_BUS_NAME_OWNER_FLAGS_REPLACE.html  constant.G_BUS_NAME_WATCHER_FLAGS_AUTO_START.html  constant.G_BUS_NAME_WATCHER_FLAGS_NONE.html  constant.G_BUS_TYPE_NONE.html  constant.G_BUS_TYPE_SESSION.html  constant.G_BUS_TYPE_STARTER.html  constant.G_BUS_TYPE_SYSTEM.html  constant.G_CONVERTER_CONVERTED.html  constant.G_CONVERTER_ERROR.html  constant.G_CONVERTER_FINISHED.html  constant.G_CONVERTER_FLUSH.html  constant.G_CONVERTER_FLUSHED.html  constant.G_CONVERTER_INPUT_AT_END.html  constant.G_CONVERTER_NO_FLAGS.html  (+2661 more)
libnotify-sys/: Cargo.toml  LICENSE  README.md  build.rs
libnotify-sys/src/: lib.rs
(+3519 files in other folders)
