[package]
name = "libnotify"
version = "1.0.0"
authors = ["Mika Attila <radiantstatue@gmail.com>", "Julian Ospald <hasufell@posteo.de>"]
license = "MIT"
description = "Rust bindings to libnotify"
readme = "README.md"
repository = "https://github.com/crumblingstatue/rust-libnotify"
documentation = "http://crumblingstatue.github.io/doc/libnotify/libnotify/"
keywords = ["libnotify", "notification"]

[dependencies]
error-chain = "^0.10.0"
gdk-pixbuf = "^0.1.3"
gdk-pixbuf-sys = "^0.3.4"
glib = "^0.1.3"
glib-sys = "^0.3.4"
gobject-sys = "^0.3.4"
libnotify-sys = "^1.0.0"
