[package]
authors = [
    "Mika Attila <radiantstatue@gmail.com>",
    "Julian Ospald <hasufell@posteo.de>",
]
description = "Rust bindings to libnotify"
documentation = "https://hasufell.github.io/rust-libnotify/libnotify/"
keywords = [
    "libnotify",
    "notification",
]
license = "MIT"
name = "libnotify"
readme = "README.md"
repository = "https://github.com/hasufell/rust-libnotify"
version = "1.0.2"

[dependencies]
gdk-pixbuf = "^0.2.0"
gdk-pixbuf-sys = "^0.4.0"
glib = "^0.3.1"
glib-sys = "^0.4.0"
gobject-sys = "^0.4.0"
libnotify-sys = "^1.0.1"
