[build-dependencies]
pkg-config = ">=0.3.7"

[dependencies]
bitflags = "^0.9.0"
libc = "^0.2.0"

[dependencies.gdk-pixbuf-sys]
version = "^0.3.4"

[dependencies.glib-sys]
version = "^0.3.4"

[dependencies.gobject-sys]
version = "^0.3.4"

[lib]
name = "libnotify_sys"

[package]
build = "build.rs"
links = "libnotify"
name = "libnotify-sys"
version = "1.0.0"

