[build-dependencies]
pkg-config = ">=0.3.7"

[dependencies]
bitflags = "^0.9.0"
libc = "^0.2.0"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[lib]
name = "libnotify_sys"

[package]
authors = ["Mika Attila <radiantstatue@gmail.com>", "Julian Ospald <hasufell@posteo.de>"]
build = "build.rs"
description = "FFI bindings to libnotify"
keywords = ["libnotify", "notification"]
license = "MIT"
links = "libnotify"
name = "libnotify-sys"
readme = "README.md"
repository = "https://github.com/hasufell/rust-libnotify"
version = "1.0.0"
